--- a/index.html
+++ b/index.html
@@ -20,52 +20,57 @@
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">9AM</div>
             <input id="input-9" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-9" class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-9" data-hour="9" class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">10AM</div>
             <input id="input-10" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-10"  class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-10" data-hour="10"  class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">11AM</div>
             <input id="input-11" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-11"  class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-11" data-hour="11" class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">12AM</div>
             <input id="input-12" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-12"  class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-12" data-hour="12"  class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">1PM</div>
             <input id="input-1" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-1"  class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-1" data-hour="1" class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">2PM</div>
             <input id="input-2" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-2"  class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-2" data-hour="2" class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">3PM</div>
             <input id="input-3" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-3"  class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-3" data-hour="3" class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">4PM</div>
             <input id="input-4" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-4"  class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-4" data-hour="4" class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">5PM</div>
             <input id="input-5" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
-            <button type="button" id="btn-5"  class="col-1 text-left btn btn-primary"></button>
+            <button type="button" id="btn-5" data-hour="5"  class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
-        
+        <div class="row">
+        <div class="col justify-content-center d-flex mb-2">    
+        <button type="button" id="clear-btn" class="btn btn-dark justify-content-center d-flex">Clear All Calendar Entries</button>
+        </div>
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./assets/script.js"></script>   
+    <script src="./assets/moment.js"></script>
 </body>
 </html>
