--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
                 <h1 class="p-5"> Work Day Scheduler</h1>
             </div>
         </div>
+            <div class="row">
+                <div class="col text-center">
+                    <h2 class="p-3" id="time"></h2>
+                </div>
+            </div>
     </div>
     <div class="container">
 
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">9AM</div>
-            <input id="input-9" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
+            <input id="input-9" class="col-9 text-left middle-col mr-3 calendar-entry" data-hour="9" placeholder="Add Event">
             <button type="button" id="btn-9" data-hour="9" class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
