js logic for past present and future fixed

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">9AM</div>
-            <input id="input-9" class="col-9 text-left middle-col mr-3 calendar-entry" data-hour="9" placeholder="Add Event">
-            <button type="button" id="btn-9" data-hour="9" class="col-1 text-left btn btn-primary button-entry"></button>
+            <input id="input-9" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
+            <button type="button" id="btn-9" data-hour="09"  class="col-1 text-left btn btn-primary button-entry"></button>
         </div>
         <div class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">10AM</div>
