added ReadMe and added semantic html

--- a/index.html
+++ b/index.html
@@ -8,71 +8,72 @@
     <title>Work Day Scheduler</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
+    <!-- title -->
+    <section class="container">
+        <section class="row">
             <div class="col text-center">
                 <h1 class="p-3"> Work Day Scheduler</h1>
             </div>
-        </div>
-            <div class="row">
+        </section>
+            <section class="row">
                 <div class="col text-center">
                     <h2 class="p-2" id="time"></h2>
                 </div>
-            </div>
-    </div>
-    <div class="container">
-
-        <div class="row justify-content-center d-flex mb-2">
+            </section>
+        </section>
+        <!-- scheduler -->
+    <section class="container">
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">9AM</div>
             <input id="input-9" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-9" data-hour="09"  class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row justify-content-center d-flex mb-2">
+        </section>
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">10AM</div>
             <input id="input-10" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-10" data-hour="10"  class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row justify-content-center d-flex mb-2">
+        </section>
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">11AM</div>
             <input id="input-11" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-11" data-hour="11" class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row justify-content-center d-flex mb-2">
+        </section>
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">12AM</div>
             <input id="input-12" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-12" data-hour="12"  class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row justify-content-center d-flex mb-2">
+        </section>
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">1PM</div>
             <input id="input-13" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-13" data-hour="13" class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row justify-content-center d-flex mb-2">
+        </section>
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">2PM</div>
             <input id="input-14" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-14" data-hour="14" class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row justify-content-center d-flex mb-2">
+        </section>
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">3PM</div>
             <input id="input-15" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-15" data-hour="15" class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row justify-content-center d-flex mb-2">
+        </section>
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">4PM</div>
             <input id="input-16" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-16" data-hour="16" class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row justify-content-center d-flex mb-2">
+        </section>
+        <section class="row justify-content-center d-flex mb-2">
             <div class="col-1 text-left left-col mr-3">5PM</div>
             <input id="input-17" class="col-9 text-left middle-col mr-3 calendar-entry" placeholder="Add Event">
             <button type="button" id="btn-17" data-hour="17"  class="col-1 text-left btn btn-primary button-entry"></button>
-        </div>
-        <div class="row">
+        </section>
+        <section class="row">
         <div class="col justify-content-center d-flex mb-2">    
         <button type="button" id="clear-btn" class="btn btn-dark justify-content-center d-flex">Clear All Calendar Entries</button>
         </div>
-        </div>
-    </div>
+    </section>
+</section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./assets/script.js"></script>   
